@@ -256,10 +256,6 @@ public class BTABiomeConfiguration {
 		badlands.setNotSpawnable();
 		badlandsPlateau.setNotSpawnable();
 		riverBadlands.setNotSpawnable();
-		
-		snowyWoods.setNotSpawnable();
-		coniferousForestClearingSnow.setNotSpawnable();
-		frozenSprings.setNotSpawnable();
 	}
 	
 	public static void filterBeachBiomes() {
