@@ -38,8 +38,8 @@ public abstract class BTAGenLayer extends GenLayer {
         layerMagnifyRiver = GenLayerZoom.magnify(1000L, layerRiverInit, scale + 2);
         GenLayerRiver layerRiver = new GenLayerRiver(1L, layerMagnifyRiver);
         GenLayerSmooth layerSmoothRivers = new GenLayerSmooth(1000L, layerRiver);
-        GenLayer layerMangnifyBiome = GenLayerZoom.magnify(1000L, layerMushroomIsland, 0);
         
+        GenLayer layerMangnifyBiome = GenLayerZoom.magnify(1000L, layerMushroomIsland, 0);
         GenLayer layerBiome;
         if (generatorInfo.isClimatized() && generatorInfo.getCompatMode().isVersionAtLeast(BTAEnumVersionCompat.V1_3_0)) {
             GenLayer layerClimateZoom = GenLayerZoom.magnify(1000l, layerClimates, 2);
@@ -54,25 +54,25 @@ public abstract class BTAGenLayer extends GenLayer {
     	}
         
         layerMangnifyBiome = GenLayerZoom.magnify(1000L, layerBiome, 2);
-        Object layerExtras = new BTAGenLayerHills(1000L, layerMangnifyBiome, generatorInfo);
+        GenLayer layerExtras = new BTAGenLayerHills(1000L, layerMangnifyBiome, generatorInfo);
 
         for (int passNum = 0; passNum < scale; passNum++) {
-            layerExtras = new GenLayerZoom((long)(1000 + passNum), (GenLayer)layerExtras);
+            layerExtras = new GenLayerZoom((long)(1000 + passNum), layerExtras);
 
             if (passNum == 0) {
-                layerExtras = new GenLayerAddIsland(3L, (GenLayer)layerExtras);
+                layerExtras = new GenLayerAddIsland(3L, layerExtras);
             }
 
             if (passNum == 1) {
-                layerExtras = new BTAGenLayerShore(1000L, (GenLayer)layerExtras);
+                layerExtras = new BTAGenLayerShore(1000L, layerExtras);
             }
 
             if (passNum == scale - 3) {
-                layerExtras = new BTAGenLayerSporadic(1000L, (GenLayer)layerExtras, generatorInfo);
+                layerExtras = new BTAGenLayerSporadic(1000L, layerExtras, generatorInfo);
             }
         }
 
-        GenLayerSmooth layerSmoothBiome = new GenLayerSmooth(1000L, (GenLayer)layerExtras);
+        GenLayerSmooth layerSmoothBiome = new GenLayerSmooth(1000L, layerExtras);
         BTAGenLayerRiverMix layerRiverMix = new BTAGenLayerRiverMix(100L, layerSmoothBiome, layerSmoothRivers);
         GenLayerVoronoiZoom layerVoronoiZoom = new GenLayerVoronoiZoom(10L, layerRiverMix);
         
