@@ -13,6 +13,7 @@ Version 1.3.0
 [*]Added the ability for reeds to spawn in patagonia and plains. In the new climate distribution system it was possible to have extremely large distances between biomes which could spawn reeds, which could be a problem given how vital they are early game. So this, combined with frozen springs above, ensures every climate is capable of spawning reeds in at least one biome. However, temperate and tropical climates remain where reeds can be found most commonly.
 [*]Added the ability for melons to spawn on the surface in jungle variants (jungle, rainforest, tropics, mangal).
 [*]Changed configuration menu to have biome configration on its own page.
+[*]Changed the formatting of the generator options string. The old format will still be processed correctly for old worlds but will not contain any new options. The new format ignores whitespace, has labels for all options, and is order-agnostic.
 [*]Changed ocean size configuration to be a scale from 1 (off) to 10 (vanilla), defaulting to 5.
 [*]Changed (increased) possible biome size ranges to 0.5x to 4x vanilla (Original BTA was 2x, vanilla large biomes is 4x). As a part of this, small world types have been deprecated as biome size information is now handled through generator options. These world types will continue to function for existing worlds but may no longer be created.
 [*]Changed the default biome size to vanilla sized biomes as the new climate zone system tends to spread out dissimilar biomes further than before.
